--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  flex-direction: row;
 }
 
 .App-logo {
@@ -20,8 +21,72 @@
 .App-link {
   color: #09d3ac;
 }
-
+.btnStyle{
+  position: relative;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #000000;
+  padding: 9px;
+  margin: 9px;
+  width: auto;
+  z-index: 2;
+  height: 4%;
+  left: 45%;
+}
+.map{
+  float: right;
+}
 .leaflet-container {
-  width: 100%;
+  position: absolute;
+  z-index: 0;
+  /* width: 100%; */
   height: 100vh;
+}
+@keyframes menuList {
+  from {left: 10}
+  to {left: 0}
+}
+.menu{
+    background-color: #ffffff;
+    width: 30%;
+    height: 100vh;
+    position: fixed;
+    z-index: 1;
+    animation-name: menuList;
+    animation-duration: 4s;
+    
+}
+
+.picture{
+  background-color: cadetblue;
+  width: 100%;
+  height: 30%;
+}
+
+.history{
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+.history::-webkit-scrollbar {
+  display: none;
+}
+ol {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+li {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 15px;
+  color: black;
+  display: block;
+  position: relative;
+}
+li:hover {
+  background-color: #eee;
 }
