--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,3 +94,10 @@ li:hover {
   width: 50%;
   height: 40%;
 }
+
+div.popup-content {
+  border-radius: 10px;
+  padding: 20px !important;
+  width: 30% !important;
+  min-width: 250px !important;
+}
